--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>veil.hdp.hive</groupId>
+    <groupId>veil.cloudera.hive</groupId>
     <artifactId>hive-jdbc-uber</artifactId>
     <packaging>jar</packaging>
-    <version>2.6.3.0-235</version>
+    <version>2.6.0-cdh5.13.0</version>
 
     <name>Hive JDBC uber jar</name>
     <description>Hive JDBC uber jar</description>
@@ -16,19 +16,15 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <hive.version>1.2.1000.2.6.3.0-235</hive.version>
-        <hadoop.version>2.7.3.2.6.3.0-235</hadoop.version>
+        <hadoop.version>2.6.0-cdh5.13.0</hadoop.version>
+        <hive.jdbc.version>1.1.0-cdh5.13.0</hive.jdbc.version>
         <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
     <repositories>
         <repository>
-            <id>hwx-releases</id>
-            <url>http://repo.hortonworks.com/content/repositories/releases/</url>
-        </repository>
-        <repository>
-            <id>hwx-public</id>
-            <url>http://repo.hortonworks.com/content/groups/public/</url>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/content/repositories/releases/</url>
         </repository>
     </repositories>
 
@@ -46,7 +42,7 @@
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-jdbc</artifactId>
-            <version>${hive.version}</version>
+            <version>${hive.jdbc.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
